--- a/starter_code/debug/index.html
+++ b/starter_code/debug/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous"></script>
-    <script src='js/Index.js'></script>
+    <script src='js/index.js'></script>
   </head>
 
   <body>
