fixed up to do list

--- a/to do list/index.html
+++ b/to do list/index.html
@@ -32,10 +32,8 @@
       <div>
         <h1>Completed List</h1>
       </div>
-      <div class='list'>
-        <li>buy cookies</li>
-        <li>eat cookies</li>
-      </div>
+      <ul id='completed-list'>
+      </ul>
       <div class='count'>
         <h3>Tasks completed: <span id="total-completed">0</span></h3>
       </div>
