--- a/Final To Do/index.html
+++ b/Final To Do/index.html
@@ -4,6 +4,7 @@
    <title>To Do List</title>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
    <script src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous"></script>
+   <script src="js/jquery.fireworks.js"></script>
    <script src="js/index.js"></script>
    <link rel="stylesheet" href="css/style.css" />
  </head>
@@ -15,6 +16,7 @@
        <form id="entry">
          <input type="text" id="newEntry" size="35" placeholder="Add a new task">
          <button type="submit">Add task</button>
+         <button type="reset">Reset List</button>
        </form>
      </header>
      <div id="main">
